Fix Book Now button alignment issue with large screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -813,6 +813,10 @@ fieldset {
     #contact {
         padding: 36px;
     }
+
+    #nav-button {
+        margin-right: 37px;
+    }
 }
 
 /* iPads, Tablets */
